переписан ридер openapi добавленна поддержка params path
